# AMD-RPP

./: CMakeLists.txt
src/: CMakeLists.txt
src/include/cpu/: host_flip.hpp
